# ido-agents

./: .gitignore  README.md  main.py  pyproject.toml
src/ido_agents/agents/: __init__.py  ido_agent.py  structured_output.py  tool_runner.py
src/ido_agents/models/: __init__.py  openai.py
src/ido_agents/utils/: structured_output.py
src/idoagents/agents/: __init__.py  ido_agent.py  structured_output.py
src/idoagents/config/: settings.py
src/idoagents/models/: __init__.py
src/idoagents/utils/: console.py
tests/: conftest.py
tests/integration/: test_ido_agent.py  test_openai_model.py  test_structured_output_agent.py  test_tool_runner.py
